# lomov

./: ._techinfo.csv  .gitignore  .swp  0001-methods.py-added-ability-to-set-basic-parameters.patch  0002-Added-documentation-to-functions.patch  0003-stat.py-added-empty-docstrings-for-functions.patch  0004-methods.py-converted-DOS-UNIX-EL.patch  0005-stat.py-added-preliminary-docstrings-for-functions.patch  0006-main-main.cpp-don-t-use-absolute-path-for-include.patch  0007-methods.py-added-two-variables.patch  0008-Added-meson.build.patch  0009-methods.py-don-t-use-global-variables-to-obtain.patch  0010-methods.py-use-parameter-way-to-pass-information.patch  0011-meson.build-use-environment-use-relative-path.patch  0012-Moved-.py-files-to-scripts.patch  0013-meson.build-trying-to-get-methods-target-to-work.patch  README.md  exp.py  final.py  first-ng.py  first.py  for_gnuplot.txt  graf.opju  meson.build  meson.build.rej  methods.json  methods.py  patches.tar  points.py  stat.py  stat.py.rej  techinfo.csv  test-LP.py  test.gp  test.ipynb  test.py  testmatrix.py
exponentiation/: exp.py  exp.py.orig  gen-lp.py
julia-fn/: read-dde.jl  read-lp.jl
main/: main  main.cpp  picewice.cpp  piecewice.cpp  piecewise  piecewise.cpp  piecewise_prof.cpp
methods/: work-do.json  work.json
patch/: 0001-methods.py-added-ability-to-set-basic-parameters.patch  0002-Added-documentation-to-functions.patch  0003-stat.py-added-empty-docstrings-for-functions.patch  0004-methods.py-converted-DOS-UNIX-EL.patch  0005-stat.py-added-preliminary-docstrings-for-functions.patch  0006-main-main.cpp-don-t-use-absolute-path-for-include.patch  0007-methods.py-added-two-variables.patch  0008-Added-meson.build.patch  0009-methods.py-don-t-use-global-variables-to-obtain.patch  0010-methods.py-use-parameter-way-to-pass-information.patch  0011-meson.build-use-environment-use-relative-path.patch  0012-Moved-.py-files-to-scripts.patch  (+22 more)
(+19 files in other folders)
